add hero section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             </div>
         </div>
     </section>
-    <!-- header section -->
+    <!-- End header section -->
+    <section>
+        <div>
+            <div>
+                <h1>Нашу продукцию выбирают лидеры
+                    ведущих отраслей по всему миру</h1>
+            </div>
+            <div>Помимо широкого ассортимента металлических изделий, мы предлагаем клиентам быструю доставку продукции. Сократили бюрократические </div>
+            <div>
+                <a href="/" type="botton">Скачать прайс-лист</a>
+                <a href="/" type="botton">Стать партнёром</a>
+            </div>
+        </div>
+    </section>
+    <!-- End hero Section -->
 </body>
 </html>
